[package]
name = "rooster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio         = { version = "1.7",    features = [ "macros", "io-util", "time", "process", "sync", "signal", "rt-multi-thread"] }
structopt  = "0.3"
futures    = "0.3.15"

[dev-dependencies]
tokio-test    = "0.4.2"
