[package]
name = "rooster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2    = { version = "0.3", features = [ "pair", "unix", "reuseport" ] }
nix        = { version = "0.19" }
moz_cbor   = { git = "https://github.com/AnimaGUS-minerva/cbor-rust.git", branch = "implement-strings" }
tokio      = { version = "1.7",    features = [ "macros", "io-util", "time", "process", "sync", "signal", "rt-multi-thread"] }
structopt  = "0.3"
futures    = "0.3.15"
rtnetlink     = { version = "0.9" }
netlink-proto = { version = "*", features = [ "tokio_socket" ] }
netlink-packet-sock-diag = "*"
netlink-packet-route = { version = "*" }
custom_error  = "*"
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]
tokio-test    = "0.4.2"
async-trait   = "0.1.57"
hex-literal   = { version = "0.3.3" }

[patch.crates-io]
hex-literal   = { git = "https://github.com/AnimaGUS-minerva/utils.git", branch = "allow-hash-comments-in-hex" }